--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /* Uso de grid flex position y float */
+/* */
 body {
     background: #fff;
     color: #222;
@@ -6,7 +7,25 @@ body {
     font-size: small;
     height: 100%;
     margin: 0;
+    overflow-y: scroll;
 }
+.aLink {
+    color: #222;
+}
+a {
+    color: #222;
+}
+a:hover { /* mouse over link */
+  text-decoration: none;
+  color: #222;
+}
+a:link { /* unvisited link */
+    color: #222;
+    text-decoration: none;
+}
+a:active { /* selected link */
+  color: orangered;
+} 
 #dummieGoogle {
     display: flex;
     flex-direction: column;
@@ -22,10 +41,19 @@ body {
     margin-top: 16px;
     display: inline-block;
 }
-.barraEncabezado {
-    justify-content: end;
+.barraEncabezado {    
     float: right;
     cursor: pointer;
+    color: #222;
+    min-width: 195px;
+    padding-left: 30px;
+    padding-right: 30px;        
+}
+.acceso {
+    padding-right: 15px;
+}
+.configuracion {
+
 }
 .imgIcono{
     background-size: 32px 32px;
@@ -38,10 +66,8 @@ body {
     width: 32px;
     z-index: 0;
 }
-#formularioBusqueda {
-    justify-content: center;
+#formularioBusqueda {         
     overflow: visible;
-
 }
 .contenedorFormulario {
     position: relative;
@@ -55,10 +81,6 @@ body {
     margin-top: -5px;
     align-items: stretch;
     flex-direction: row;
-}
-.barraBusqueda {
-    background: #fff;
-    display: flex;
     border: 1px solid #dfe1e5;
     box-shadow: none;
     border-radius: 24px;
@@ -67,21 +89,71 @@ body {
     margin: 0 auto;
     width: 582px;
 }
-.iconoBusqueda {}
+.barraBusqueda {
+    background: #fff;
+    display: flex;
+    padding: 5px 8px 0 14px;
+    margin: 0 auto;    
+}
+.iconoBusqueda {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-right: 13px;
+    margin-top: -5px;
+}
 .inputBusqueda {
     font: 16px arial,sans-serif;
     line-height: normal;
     line-height: 34px;
     height: 34px;
+    display: flex;
+    width: 495px;
+    margin: 0;
+    padding: 0;    
+}
+#gSearch {
+    border: none;
+    margin: 0;
+    padding: 0;    
+    outline:  none;
+    color: rgba(0,0,0,.87);
+    flex: 100%;
 }
 .contenedorBotones {
     padding-top: 18px;
     height: 70px;
     width: 571px;
+    display: inline-flex;
+    align-content: center;
+    justify-items: center;  
+    justify-content: center;  
+    margin: 0 auto;    
 }
-.buscarGoogle {}
-.suerte {}
-#principal {}
+.btnGoogle {
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+}
+#principal {
+    align-content: center;
+    padding-top: 109px;
+    justify-items: center;    
+    margin-top: 47px;
+    height: 233px;
+    margin: 0 auto;
+}
 .contenido {}
 #footer {
     position: fixed;
@@ -102,15 +174,26 @@ body {
     line-height: 40px;
     min-width: 980px;
     border-top: 1px solid #e4e4e4;
+    height: auto;
 }
-#barraFooter {}
-.pais {}
-#linkDescubre {
-    float: right;
-    margin-right: 30px;
-    white-space: nowrap;
+#barraFooter {
+    font-size: 10pt;
+    height: 35px;
+    line-height: 40px;
 }
-#linkMas {
+.pais {
     margin-left: 30px;
     white-space: nowrap;
+}
+.visitar {
+    border-top: 1px solid #e4e4e4;
+}
+#linkDescubre {    
+    margin-left: 30px;
+    white-space: nowrap;
+}
+#linkMas {    
+    margin-right: 30px;
+    white-space: nowrap;
+    float: right;
 }
